--- a/task-1-3/index.html
+++ b/task-1-3/index.html
@@ -5,7 +5,203 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Account</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&family=Oswald:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <form class="form" autocomplete="off">
+      <div class="form__header container">
+        <h1 class="form__title">Create Account</h1>
+      </div>
+
+      <div class="form__fields container">
+        <!-- First and Last name -->
+        <label class="field field--required">
+          <p class="field__title">First name</p>
+          <input
+            class="field__text"
+            type="text"
+            name="firstName"
+            placeholder="enter your first name"
+            required
+          />
+        </label>
+        <label class="field">
+          <p class="field__title">Last name</p>
+          <input
+            class="field__text"
+            type="text"
+            name="lastName"
+            placeholder="enter your last name"
+          />
+        </label>
+
+        <!-- Email -->
+        <label class="field field--required form__field--wide">
+          <p class="field__title">Email</p>
+          <input
+            class="field__text"
+            type="email"
+            name="email"
+            placeholder="enter your email"
+            required
+          />
+        </label>
+
+        <!-- Password -->
+        <label class="field field--required">
+          <p class="field__title">Password</p>
+          <input
+            class="field__text"
+            type="password"
+            name="password"
+            placeholder="enter your password"
+            minlength="6"
+            required
+          />
+        </label>
+        <label class="field field--required">
+          <p class="field__title">Confirm Password</p>
+          <input
+            class="field__text"
+            type="password"
+            name="passwordConfirm"
+            placeholder="enter your password again"
+            minlength="6"
+            required
+          />
+        </label>
+
+        <!-- Gender -->
+        <fieldset class="field">
+          <legend class="field__title">Gender</legend>
+          <div class="field__items">
+            <label class="checkbox checkbox--circle">
+              <input
+                class="checkbox__input"
+                type="radio"
+                name="gender"
+                value="male"
+              />
+              <span class="checkbox__caption">Male</span>
+            </label>
+            <label class="checkbox checkbox--circle">
+              <input
+                class="checkbox__input"
+                type="radio"
+                name="gender"
+                value="female"
+              />
+              <span class="checkbox__caption">Female</span>
+            </label>
+          </div>
+        </fieldset>
+
+        <!-- Hobbies -->
+        <fieldset class="field">
+          <legend class="field__title">Hobbies</legend>
+          <div class="field__items">
+            <label class="checkbox">
+              <input
+                class="checkbox__input"
+                type="checkbox"
+                name="hobby"
+                value="music"
+              />
+              <span class="checkbox__caption">Music</span>
+            </label>
+            <label class="checkbox">
+              <input
+                class="checkbox__input"
+                type="checkbox"
+                name="hobby"
+                value="sports"
+              />
+              <span class="checkbox__caption">Sports</span>
+            </label>
+            <label class="checkbox">
+              <input
+                class="checkbox__input"
+                type="checkbox"
+                name="hobby"
+                value="travel"
+              />
+              <span class="checkbox__caption">Travel</span>
+            </label>
+            <label class="checkbox">
+              <input
+                class="checkbox__input"
+                type="checkbox"
+                name="hobby"
+                value="movies"
+              />
+              <span class="checkbox__caption">Movies</span>
+            </label>
+          </div>
+        </fieldset>
+
+        <!-- Income source -->
+        <label class="field">
+          <p class="field__title">Source of Income</p>
+          <select class="field__select" name="incomeSource">
+            <option value="employed">Employed</option>
+            <option value="selfEmployed,">Self-employed</option>
+            <option value="unemployed">Unemployed</option>
+          </select>
+        </label>
+
+        <!-- Income value -->
+        <label class="field">
+          <p class="field__title">Income</p>
+          <div class="range">
+            <input
+              class="range__input js-range-input"
+              type="range"
+              name="incomeValue"
+              min="0"
+              max="99"
+              step="1"
+              value="20"
+            />
+            <span class="range__value js-range-value">20k</span>
+          </div>
+        </label>
+
+        <!-- Upload picture -->
+        <label class="field">
+          <p class="field__title">Upload Profile Picture</p>
+          <input class="field__file" type="file" name="file" />
+        </label>
+
+        <!-- Age -->
+        <label class="field">
+          <p class="field__title">Age</p>
+          <input
+            class="field__text"
+            type="number"
+            name="age"
+            min="12"
+            max="120"
+          />
+        </label>
+
+        <!-- Bio -->
+        <label class="field form__field--wide">
+          <p class="field__title">Bio</p>
+          <textarea class="field__text" name="bio" rows="8"></textarea>
+        </label>
+      </div>
+
+      <div class="form__footer container">
+        <button class="button js-submit" type="submit">Create</button>
+      </div>
+    </form>
+
+    <script src="js/index.js"></script>
+  </body>
 </html>
