fix validation errors

--- a/task-1-3/index.html
+++ b/task-1-3/index.html
@@ -22,7 +22,7 @@
       <div class="form__fields container">
         <!-- First and Last name -->
         <label class="field field--required">
-          <p class="field__title">First name</p>
+          <span class="field__title">First name</span>
           <input
             class="field__text"
             type="text"
@@ -32,7 +32,7 @@
           />
         </label>
         <label class="field">
-          <p class="field__title">Last name</p>
+          <span class="field__title">Last name</span>
           <input
             class="field__text"
             type="text"
@@ -43,7 +43,7 @@
 
         <!-- Email -->
         <label class="field field--required form__field--wide">
-          <p class="field__title">Email</p>
+          <span class="field__title">Email</span>
           <input
             class="field__text"
             type="email"
@@ -55,7 +55,7 @@
 
         <!-- Password -->
         <label class="field field--required">
-          <p class="field__title">Password</p>
+          <span class="field__title">Password</span>
           <input
             class="field__text"
             type="password"
@@ -66,7 +66,7 @@
           />
         </label>
         <label class="field field--required">
-          <p class="field__title">Confirm Password</p>
+          <span class="field__title">Confirm Password</span>
           <input
             class="field__text"
             type="password"
@@ -147,7 +147,7 @@
 
         <!-- Income source -->
         <label class="field">
-          <p class="field__title">Source of Income</p>
+          <span class="field__title">Source of Income</span>
           <select class="field__select" name="incomeSource">
             <option value="employed">Employed</option>
             <option value="selfEmployed,">Self-employed</option>
@@ -157,8 +157,8 @@
 
         <!-- Income value -->
         <label class="field">
-          <p class="field__title">Income</p>
-          <div class="range">
+          <span class="field__title">Income</span>
+          <span class="range">
             <input
               class="range__input js-range-input"
               type="range"
@@ -169,18 +169,18 @@
               value="20"
             />
             <span class="range__value js-range-value">20k</span>
-          </div>
+          </span>
         </label>
 
         <!-- Upload picture -->
         <label class="field">
-          <p class="field__title">Upload Profile Picture</p>
+          <span class="field__title">Upload Profile Picture</span>
           <input class="field__file" type="file" name="file" />
         </label>
 
         <!-- Age -->
         <label class="field">
-          <p class="field__title">Age</p>
+          <span class="field__title">Age</span>
           <input
             class="field__text"
             type="number"
@@ -192,7 +192,7 @@
 
         <!-- Bio -->
         <label class="field form__field--wide">
-          <p class="field__title">Bio</p>
+          <span class="field__title">Bio</span>
           <textarea class="field__text" name="bio" rows="4"></textarea>
         </label>
       </div>
