add h1 and h2 headers to fix validation errors

--- a/task-1-5/index.html
+++ b/task-1-5/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>4 Seasons</title>
+    <title>4 Seasons Parallax</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,18 +15,19 @@
   </head>
   <body>
     <main class="parallax">
+      <h1 class="hidden">4 Seasons Parallax</h1>
       <section class="parallax__group">
         <img
           class="parallax__layer parallax__layer--far"
           src="./images/winter.webp"
           alt="Winter"
         />
-        <p class="parallax__layer">Winter</p>
+        <h2 class="parallax__layer">Winter</h2>
       </section>
 
       <section class="parallax__group parallax__group--top">
         <img class="parallax__layer" src="./images/spring.webp" alt="Spring" />
-        <p class="parallax__layer parallax__layer--close">Spring</p>
+        <h2 class="parallax__layer parallax__layer--close">Spring</h2>
       </section>
 
       <section class="parallax__group">
@@ -35,12 +36,12 @@
           src="./images/summer.webp"
           alt="Summer"
         />
-        <p class="parallax__layer">Summer</p>
+        <h2 class="parallax__layer">Summer</h2>
       </section>
 
       <section class="parallax__group parallax__group--top">
         <img class="parallax__layer" src="./images/fall.webp" alt="Fall" />
-        <p class="parallax__layer parallax__layer--close">Fall</p>
+        <h2 class="parallax__layer parallax__layer--close">Fall</h2>
       </section>
     </main>
   </body>
