--- a/task-1-8/index.html
+++ b/task-1-8/index.html
@@ -10,16 +10,18 @@
   <body>
     <!-- Header section -->
     <header class="header">
-      <a class="logo" href="index.html">LOGO</a>
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item"><a class="nav__link" href="#!">Home</a></li>
-          <li class="nav__item"><a class="nav__link" href="#!">About</a></li>
-          <li class="nav__item">
-            <a class="nav__link" href="#!">Contact us</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container header__container">
+        <a class="logo" href="index.html">LOGO</a>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="#!">Home</a></li>
+            <li class="nav__item"><a class="nav__link" href="#!">About</a></li>
+            <li class="nav__item">
+              <a class="nav__link" href="#!">Contact us</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
