--- a/task-1-8/index.html
+++ b/task-1-8/index.html
@@ -27,31 +27,30 @@
     <main>
       <!-- Hero section -->
       <section class="hero">
-        <h1 class="hero__title">New E-commerce App best for You</h1>
-        <p class="hero__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet sed
-          vulputate vitae velit dictum cursus amet. Turpis donec ut velit quis.
-          Cursus commodo, eget urna, sapien amet.
-        </p>
-        <div class="hero__buttons">
-          <a class="button" href="#!" target="_blank">
-            <svg class="button__svg">
-              <use href=""></use>
-            </svg>
-            <span class="button__text">
-              <span class="button__text--small">Get it on</span>
-              Google Play
-            </span>
-          </a>
-          <a class="button" href="#!" target="_blank">
-            <svg class="button__svg">
-              <use href=""></use>
-            </svg>
-            <span class="button__text">
-              <span class="button__text--small">Download on the</span>
-              App Store
-            </span>
-          </a>
+        <div class="container hero__container">
+          <div class="hero__content">
+            <h1 class="hero__title">New E-commerce App best for You</h1>
+            <p class="hero__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet sed
+              vulputate vitae velit dictum cursus amet. Turpis donec ut velit
+              quis. Cursus commodo, eget urna, sapien amet.
+            </p>
+            <div class="hero__buttons">
+              <a class="button" href="#!" target="_blank">
+                <svg class="button__svg" width="136" height="36">
+                  <use href="./assets/images/sprite.svg#icon-google-play"></use>
+                </svg>
+              </a>
+              <a class="button" href="#!" target="_blank">
+                <svg class="button__svg" width="136" height="36">
+                  <use href="./assets/images/sprite.svg#icon-app-store"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="hero__image">
+            <img src="./assets/images/hero-phones.png" alt="App mockups" />
+          </div>
         </div>
       </section>
 
