--- a/task-1-8/index.html
+++ b/task-1-8/index.html
@@ -163,32 +163,31 @@
 
       <!-- Testimonials section -->
       <section class="testimonials">
-        <h3 class="testimonials__title">What our client say</h3>
-        <div class="slider testimonials__slider">
-          <ul class="slider__items">
-            <li class="feedback">
-              <img class="feedback__img" src="" alt="" />
-              <div class="feedback__wrap">
-                <p class="feedback__text">
+        <div class="container container--narrow">
+          <h3 class="testimonials__title">What our client say</h3>
+          <div class="slider testimonials__slider">
+            <ul class="slider__pages">
+              <li class="slider__page">
+                <p class="slider__text">
                   Amet in elementum nulla scelerisque dui, egestas at. Elit
                   consectetur turpis elementum amet vitae et etiam nec. Varius
                   volutpat hac adipiscing tincidunt pretium.
                 </p>
-                <p class="feedback__username">Angel Paulina</p>
-              </div>
-            </li>
-          </ul>
-          <div class="slider__controls">
-            <button class="button">
-              <svg class="button__svg">
-                <use href=""></use>
-              </svg>
-            </button>
-            <button class="button">
-              <svg class="button__svg">
-                <use href=""></use>
-              </svg>
-            </button>
+                <p class="slider__username">Angel Paulina</p>
+              </li>
+            </ul>
+            <div class="slider__controls">
+              <button class="slider__button">
+                <svg width="40" height="40">
+                  <use href="./assets/images/sprite.svg#icon-left"></use>
+                </svg>
+              </button>
+              <button class="slider__button">
+                <svg width="40" height="40">
+                  <use href="./assets/images/sprite.svg#icon-right"></use>
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
       </section>
