--- a/task-1-8/index.html
+++ b/task-1-8/index.html
@@ -194,31 +194,30 @@
 
       <!-- Download section -->
       <section class="download">
-        <h3 class="download__title">Download app to enjoy more!</h3>
-        <p class="download__text">
-          Amet in elementum nulla scelerisque dui, egestas at. Elit consectetur
-          turpis elementum amet vitae et etiam nec. Varius volutpat hac
-          adipiscing tincidunt pretium.
-        </p>
-        <div class="download__buttons">
-          <a class="button" href="#!" target="_blank">
-            <svg class="button__svg">
-              <use href=""></use>
-            </svg>
-            <span class="button__text">
-              <span class="button__text--small">Get it on</span>
-              Google Play
-            </span>
-          </a>
-          <a class="button" href="#!" target="_blank">
-            <svg class="button__svg">
-              <use href=""></use>
-            </svg>
-            <span class="button__text">
-              <span class="button__text--small">Download on the</span>
-              App Store
-            </span>
-          </a>
+        <div class="container container--narrow download__container">
+          <div class="gownload__image">
+            <img src="./assets/images/download-phones.png" alt="App mockups" />
+          </div>
+          <div class="download__content">
+            <h3 class="download__title">Download app to enjoy more!</h3>
+            <p class="download__text">
+              Amet in elementum nulla scelerisque dui, egestas at. Elit
+              consectetur turpis elementum amet vitae et etiam nec. Varius
+              volutpat hac adipiscing tincidunt pretium.
+            </p>
+            <div class="download__buttons">
+              <a class="button button--black" href="#!" target="_blank">
+                <svg class="button__svg" width="136" height="36">
+                  <use href="./assets/images/sprite.svg#icon-google-play"></use>
+                </svg>
+              </a>
+              <a class="button button--black" href="#!" target="_blank">
+                <svg class="button__svg" width="136" height="36">
+                  <use href="./assets/images/sprite.svg#icon-app-store"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
